--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,7 @@ postgresql_global_config_options:
 postgresql_hba_entries:
   - { type: local, database: all, user: postgres, auth_method: peer }
   - { type: local, database: all, user: all, auth_method: peer }
-  - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
+  - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: trust }
   - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
 
 # Debian only. Used to generate the locales used by PostgreSQL databases.
