--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -1,11 +1,11 @@
 ---
-__postgresql_version: "9.2"
-__postgresql_data_dir: "/var/lib/pgsql/data"
-__postgresql_bin_path: "/usr/bin"
-__postgresql_config_path: "/var/lib/pgsql/data"
-__postgresql_daemon: postgresql
+__postgresql_version: "9.6.5"
+__postgresql_data_dir: "/var/lib/pgsql/9.6/data"
+__postgresql_bin_path: "/usr/pgsql-9.6/bin"
+__postgresql_config_path: "/var/lib/pgsql/9.6/data"
+__postgresql_daemon: postgresql-9.6
 __postgresql_packages:
-  - postgresql
-  - postgresql-server
-  - postgresql-contrib
-  - postgresql-libs
+  - postgresql96-9.6.5
+  - postgresql96-server-9.6.5
+  - postgresql96-contrib-9.6.5
+  - postgresql96-libs-9.6.5
